--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
   },
   "homepage": "https://github.com/SethShoemaker/PostTopicsWordPressPlugin#readme",
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "file-loader": "^6.2.0",
+    "postcss": "^8.4.25",
+    "postcss-loader": "^7.3.3",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
     "tailwindcss": "^3.3.2",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4"
